--- a/settings.ini
+++ b/settings.ini
@@ -31,7 +31,7 @@ title = %(lib_name)s
 
 ### OPTIONAL ### see https://github.com/fastai/nbprocess/blob/master/settings.ini for examples
 
-# requirements = fastcore pandas
+requirements = fastcore pandas
 # dev_requirements =
 # console_scripts =
 
