--- a/settings.ini
+++ b/settings.ini
@@ -17,7 +17,7 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
-nbs_path = .
+nbs_path = nbs
 doc_path = docs
 recursive = False
 tst_flags = notest
